# rusty_obs

./: Cargo.toml  build_and_copy.bat
common/: Cargo.toml
common/src/: contract.rs  lib.rs  logger.rs  plugin_runner.rs
oobe_engine/: Cargo.toml
oobe_engine/config/: logger.yaml
oobe_engine/src/: main.rs
plugin_example_1/: Cargo.toml
plugin_example_1/src/: lib.rs
